@@ -2,9 +2,11 @@ package kea.dpang.item.service;
 
 import kea.dpang.item.base.SuccessResponse;
 import kea.dpang.item.dto.review.CreateReviewRequestDto;
-import kea.dpang.item.dto.review.ReviewPersonalListDto;
-import kea.dpang.item.dto.review.ReviewResponseDto;
+import kea.dpang.item.dto.review.PersonalReviewDto;
+import kea.dpang.item.dto.review.ReviewDto;
+import kea.dpang.item.entity.Item;
 import kea.dpang.item.entity.Review;
+import kea.dpang.item.exception.ItemNotFoundException;
 import kea.dpang.item.feign.UserServiceFeignClient;
 import kea.dpang.item.feign.dto.UserDetailDto;
 import kea.dpang.item.repository.ItemRepository;
@@ -18,7 +20,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -33,61 +35,49 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     @Transactional
     public void createReview(CreateReviewRequestDto dto) {
-        Review review = Review.from(dto, itemRepository);
-        new ReviewResponseDto(reviewRepository.save(review));
-        log.info("새로운 리뷰 등록 완료. 리뷰 ID: {}", review.getReviewId());
+        // 상품 조회
+        Item item = itemRepository.findById(dto.getItemId())
+                .orElseThrow(() -> new ItemNotFoundException(dto.getItemId()));
+
+        // 리뷰 생성
+        Review review = Review.from(dto, item);
+
+        // 리뷰 저장
+        reviewRepository.save(review);
+        log.info("새로운 리뷰 등록 완료. 리뷰 ID: {}", review.getId());
     }
+
 
     // 상품별 리뷰 리스트 조회
     @Override
     @Transactional
-    public List<ReviewResponseDto> getReviewList(Long itemId, Pageable pageable) {
+    public List<ReviewDto> getReviewList(Long itemId, Pageable pageable) {
         Page<Review> reviews = reviewRepository.findByItemIdItemId(itemId, pageable);
         return reviews.stream()
-                .map(ReviewResponseDto::new)
-                .collect(Collectors.toList());
+                .map(ReviewDto::new)
+                .toList();
     }
 
     // 사용자별 리뷰 리스트 조회
     @Override
     @Transactional
-    public List<ReviewPersonalListDto> getReviewPersonalList(Long reviewerId, Pageable pageable) {
+    public List<PersonalReviewDto> getPersonalReviewList(Long reviewerId, Pageable pageable) {
+        // 사용자 서버로부터 사용자 정보 조회
         ResponseEntity<SuccessResponse<UserDetailDto>> responseEntity = userServiceFeignClient.getReviewer(reviewerId);
-        String name = responseEntity.getBody().getData().getName();
+
+        // 사용자 이름 가져오기
+        String name = Optional.ofNullable(responseEntity.getBody())
+                .map(SuccessResponse::getData)
+                .map(UserDetailDto::getName)
+                .orElseThrow(() -> new RuntimeException("사용자 정보 조회에 실패하였습니다."));
+
+        // 사용자 리뷰 리스트 조회
         Page<Review> reviews = reviewRepository.findByReviewerId(reviewerId, pageable);
-        return reviews.stream()
-                .map(review -> new ReviewPersonalListDto(review, name))
-                .collect(Collectors.toList());
+
+        // 리뷰 리스트를 PersonalReviewDto로 변환
+        return reviews.getContent().stream()
+                .map(review -> PersonalReviewDto.of(review, name))
+                .toList();
     }
-
-
-//    // 리뷰 조회
-//    @Override
-//    @Transactional(readOnly = true)
-//    public ReviewResponseDto getReview(Long reviewId) {
-//        return reviewRepository.findById(reviewId)
-//                .map(ReviewResponseDto::new)
-//                .orElseThrow(() -> new ReviewNotFoundException(reviewId));
-//    }
-
-//    // 리뷰 수정
-//    @Override
-//    @Transactional
-//    public ReviewResponseDto updateReview(Long reviewId, ReviewUpdateDto dto) {
-//        review review = reviewRepository.findById(reviewId)
-//                .orElseThrow(() -> new ReviewNotFoundException(reviewId));
-//
-//        review.updateInformation(dto);
-//        return new ReviewResponseDto(reviewRepository.save(review));
-//    }
-
-//    // 리뷰 삭제
-//    @Override
-//    @Transactional
-//    public void deleteReview(Long reviewId) {
-//        review review = reviewRepository.findById(reviewId)
-//                .orElseThrow(() -> new ReviewNotFoundException(reviewId));
-//        reviewRepository.delete(review);
-//    }
 
 }
